overflow of tile when game mode changes is resolved

--- a/src/App.css
+++ b/src/App.css
@@ -151,6 +151,7 @@ a {
 	width: 500px;
 	height: 500px;
 	border-radius: 6px;
+	overflow: hidden;
 }
 
 .tile_container {
